all svg changed

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -186,7 +186,10 @@
                                 <img src="../resources/images/backgrounds/card-arrow-down.png" alt="arrow">
                             </span>
                         </h2>
-                        <h3>Total Order</h3>
+                        <h3 class="position-relative">
+                            Total Order
+                            <img class="position-absolute" src="../resources/images/total-order-line.png" alt="line">
+                        </h3>
                     </div>
                 </div>
             </div>
