--- a/pages/all-employees.html
+++ b/pages/all-employees.html
@@ -165,31 +165,12 @@
                     <button class="nav-link active" id="all-employee-tab" data-bs-toggle="tab"
                             data-bs-target="#all-payroll" type="button" role="tab" aria-controls="nav-home"
                             aria-selected="true">
-                        <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M7 6C7 5.44772 7.44772 5 8 5H14C14.5523 5 15 5.44772 15 6C15 6.55228 14.5523 7 14 7H8C7.44772 7 7 6.55228 7 6Z"
-                                  fill="#616161"/>
-                            <path d="M8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12H14C14.5523 12 15 11.5523 15 11C15 10.4477 14.5523 10 14 10H8Z"
-                                  fill="#616161"/>
-                            <path d="M7 16C7 15.4477 7.44772 15 8 15H14C14.5523 15 15 15.4477 15 16C15 16.5523 14.5523 17 14 17H8C7.44772 17 7 16.5523 7 16Z"
-                                  fill="#616161"/>
-                            <path d="M6 6C6 6.5523 5.5523 7 5 7C4.4477 7 4 6.5523 4 6C4 5.4477 4.4477 5 5 5C5.5523 5 6 5.4477 6 6Z"
-                                  fill="#616161"/>
-                            <path d="M5 12C5.5523 12 6 11.5523 6 11C6 10.4477 5.5523 10 5 10C4.4477 10 4 10.4477 4 11C4 11.5523 4.4477 12 5 12Z"
-                                  fill="#616161"/>
-                            <path d="M6 16C6 16.5523 5.5523 17 5 17C4.4477 17 4 16.5523 4 16C4 15.4477 4.4477 15 5 15C5.5523 15 6 15.4477 6 16Z"
-                                  fill="#616161"/>
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                  d="M0.5 2C0.5 0.89543 1.39543 0 2.5 0H16.5C17.6046 0 18.5 0.89543 18.5 2V20C18.5 21.1046 17.6046 22 16.5 22H2.5C1.39543 22 0.5 21.1046 0.5 20V2ZM16.5 2H2.5V20H16.5V2Z"
-                                  fill="#616161"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-list"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3.01" y2="6"></line><line x1="3" y1="12" x2="3.01" y2="12"></line><line x1="3" y1="18" x2="3.01" y2="18"></line></svg>
                         All Employees
                     </button>
                     <button class="nav-link" id="visa-tab" data-bs-toggle="tab" data-bs-target="#pending-payroll"
                             type="button" role="tab" aria-controls="nav-profile" aria-selected="false">
-                        <svg width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.5001 2.99018L18.0301 16.0002H2.97012L10.5001 2.99018ZM1.24012 15.0002C0.470121 16.3302 1.43012 18.0002 2.97012 18.0002H18.0301C19.5701 18.0002 20.5301 16.3302 19.7601 15.0002L12.2301 1.99018C11.4601 0.660176 9.54012 0.660176 8.77012 1.99018L1.24012 15.0002ZM9.50012 8.00018V10.0002C9.50012 10.5502 9.95012 11.0002 10.5001 11.0002C11.0501 11.0002 11.5001 10.5502 11.5001 10.0002V8.00018C11.5001 7.45018 11.0501 7.00018 10.5001 7.00018C9.95012 7.00018 9.50012 7.45018 9.50012 8.00018ZM9.50012 13.0002H11.5001V15.0002H9.50012V13.0002Z"
-                                  fill="#616161"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-triangle"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                         Visa Status
                     </button>
                     <button class="nav-link" id="uploded-tab" data-bs-toggle="tab" data-bs-target="#uploaded-payroll"
@@ -1194,11 +1175,7 @@
                             </td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1236,11 +1213,7 @@
                             </td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1269,11 +1242,7 @@
                             <td>-</td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1311,11 +1280,7 @@
                             </td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1353,11 +1318,7 @@
                             </td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1386,11 +1347,7 @@
                             <td>-</td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1428,11 +1385,7 @@
                             </td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1461,11 +1414,7 @@
                             <td>-</td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1494,11 +1443,7 @@
                             <td>-</td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
@@ -1536,11 +1481,7 @@
                             </td>
                             <td class="d-flex">
                                     <span class="action__btn mx-2">
-                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z"
-                                                  fill="#F16532"/>
-                                        </svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     </span>
                                 <span class="action__btn">
                                         <svg width="14" height="4" viewBox="0 0 14 4" fill="none"
