--- a/pages/worksites-details.html
+++ b/pages/worksites-details.html
@@ -186,18 +186,12 @@
                     </button>
                     <button class="nav-link" id="visa-tab" data-bs-toggle="tab" data-bs-target="#pending-payroll"
                             type="button" role="tab" aria-controls="nav-profile" aria-selected="false">
-                        <svg width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.5001 2.99018L18.0301 16.0002H2.97012L10.5001 2.99018ZM1.24012 15.0002C0.470121 16.3302 1.43012 18.0002 2.97012 18.0002H18.0301C19.5701 18.0002 20.5301 16.3302 19.7601 15.0002L12.2301 1.99018C11.4601 0.660176 9.54012 0.660176 8.77012 1.99018L1.24012 15.0002ZM9.50012 8.00018V10.0002C9.50012 10.5502 9.95012 11.0002 10.5001 11.0002C11.0501 11.0002 11.5001 10.5502 11.5001 10.0002V8.00018C11.5001 7.45018 11.0501 7.00018 10.5001 7.00018C9.95012 7.00018 9.50012 7.45018 9.50012 8.00018ZM9.50012 13.0002H11.5001V15.0002H9.50012V13.0002Z"
-                                  fill="#616161"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-triangle"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                         Visa Status
                     </button>
                     <button class="nav-link" id="uploded-tab" data-bs-toggle="tab" data-bs-target="#uploaded-payroll"
                             type="button" role="tab" aria-controls="nav-contact" aria-selected="false">
-                        <svg width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.5001 2.99018L18.0301 16.0002H2.97012L10.5001 2.99018ZM1.24012 15.0002C0.470121 16.3302 1.43012 18.0002 2.97012 18.0002H18.0301C19.5701 18.0002 20.5301 16.3302 19.7601 15.0002L12.2301 1.99018C11.4601 0.660176 9.54012 0.660176 8.77012 1.99018L1.24012 15.0002ZM9.50012 8.00018V10.0002C9.50012 10.5502 9.95012 11.0002 10.5001 11.0002C11.0501 11.0002 11.5001 10.5502 11.5001 10.0002V8.00018C11.5001 7.45018 11.0501 7.00018 10.5001 7.00018C9.95012 7.00018 9.50012 7.45018 9.50012 8.00018ZM9.50012 13.0002H11.5001V15.0002H9.50012V13.0002Z"
-                                  fill="#616161"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-triangle"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
                         Licence Status
                     </button>
                 </div>
