fjilter drop down

--- a/pages/filter-dropdown-list.html
+++ b/pages/filter-dropdown-list.html
@@ -204,14 +204,14 @@
                 <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
                     <div class="row payroll__filter--container m-0">
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="chart__top--right payroll__filter--bg position-relative" id="jobFilter">
-                                <p class="payroll__filter--bg mb-0">Jobs</p>
+                            <div class="chart__top--right filter__btn payroll__filter--bg position-relative " id="jobFilter">
+                                Jobs
                                 <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
                                           fill="#616161"/>
                                 </svg>
-                                <div class="job__filter--list" id="jobFilterContent">
+                                <div class="job__filter--list active__search--filter" id="jobFilterContent" >
                                     <div class="filter__heading">
                                         <span>Jobs</span>
                                         <span>Clear</span>
@@ -260,14 +260,14 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="chart__top--right payroll__filter--bg position-relative" id="venusFilter">
-                                <p class="payroll__filter--bg mb-0">Venues</p>
+                            <div class="chart__top--right filter__btn payroll__filter--bg position-relative" id="venusFilter">
+                                Venues
                                 <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
                                           fill="#616161"/>
                                 </svg>
-                                <div class="job__filter--list" id="venusFilterContent">
+                                <div class="job__filter--list active__search--filter" id="venusFilterContent">
                                     <div class="filter__heading">
                                         <span>Venues</span>
                                         <span>Clear</span>
@@ -317,14 +317,14 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0 p-sm-0">
-                            <div class="chart__top--right position-relative svg__fill" id="syncFilter">
-                                <p class="mb-0">Sync Type</p>
+                            <div class="chart__top--right filter__btn position-relative svg__fill" id="syncFilter">
+                                Sync Type
                                 <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
                                           fill="#616161"/>
                                 </svg>
-                                <div class="job__filter--list" id="syncFilterContent">
+                                <div class="job__filter--list active__search--filter" id="syncFilterContent">
                                     <div class="filter__heading">
                                         <span>Sync</span>
                                         <span>Clear</span>
