--- a/pages/payroll-entries.html
+++ b/pages/payroll-entries.html
@@ -208,14 +208,14 @@
                 <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
                     <div class="row payroll__filter--container m-0">
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="chart__top--right payroll__filter--bg position-relative" id="jobFilter">
-                                <p class="payroll__filter--bg mb-0">Jobs</p>
+                            <div class="chart__top--right filter__btn payroll__filter--bg position-relative " id="jobFilter">
+                                Jobs
                                 <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
                                           fill="#616161"/>
                                 </svg>
-                                <div class="job__filter--list" id="jobFilterContent">
+                                <div class="job__filter--list active__search--filter" id="jobFilterContent" >
                                     <div class="filter__heading">
                                         <span>Jobs</span>
                                         <span>Clear</span>
@@ -230,38 +230,48 @@
                                     </div>
                                     <div class="filter__checkbox">
                                         <div class="filter__group mt-2">
-                                            <input type="checkbox" name="" id="id1">
-                                            <label for="id1">Barista</label>
+                                            <label class="checkbox__container">Barista
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id2">
-                                            <label for="id2">Barista</label>
+                                            <label class="checkbox__container">Barista
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id3">
-                                            <label for="id3">Floor Manager</label>
+                                            <label class="checkbox__container">Floor Manager
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id4">
-                                            <label for="id4">Bar</label>
+                                            <label class="checkbox__container">Bar
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id5">
-                                            <label for="id5">Waiter</label>
+                                            <label class="checkbox__container">Waiter
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="chart__top--right payroll__filter--bg position-relative" id="venusFilter">
-                                <p class="payroll__filter--bg mb-0">Venues</p>
+                            <div class="chart__top--right filter__btn payroll__filter--bg position-relative" id="venusFilter">
+                                Venues
                                 <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
                                           fill="#616161"/>
                                 </svg>
-                                <div class="job__filter--list" id="venusFilterContent">
+                                <div class="job__filter--list active__search--filter" id="venusFilterContent">
                                     <div class="filter__heading">
                                         <span>Venues</span>
                                         <span>Clear</span>
@@ -276,39 +286,49 @@
                                     </div>
                                     <div class="filter__checkbox">
                                         <div class="filter__group mt-2">
-                                            <input type="checkbox" name="" id="id6">
-                                            <label class="mb-0" for="id6">Select All</label>
+                                            <label class="checkbox__container">Select All
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="c-border mt-2 mb-2"></div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id7">
-                                            <label for="id7">Barista</label>
+                                            <label class="checkbox__container">Barista
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id8">
-                                            <label for="id8">Floor Manager</label>
+                                            <label class="checkbox__container">Floor Manager
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id9">
-                                            <label for="id9">Bar</label>
+                                            <label class="checkbox__container">Bar
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                         <div class="filter__group">
-                                            <input type="checkbox" name="" id="id10">
-                                            <label for="id10">Waiter</label>
+                                            <label class="checkbox__container">Waiter
+                                                <input type="checkbox">
+                                                <span class="checkmark"></span>
+                                            </label>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0 p-sm-0">
-                            <div class="chart__top--right position-relative svg__fill" id="syncFilter">
-                                <p class="mb-0">Sync Type</p>
+                            <div class="chart__top--right filter__btn position-relative svg__fill" id="syncFilter">
+                                Sync Type
                                 <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
                                           fill="#616161"/>
                                 </svg>
-                                <div class="job__filter--list" id="syncFilterContent">
+                                <div class="job__filter--list active__search--filter" id="syncFilterContent">
                                     <div class="filter__heading">
                                         <span>Sync</span>
                                         <span>Clear</span>
