radio btn design

--- a/pages/filter-dropdown-list.html
+++ b/pages/filter-dropdown-list.html
@@ -332,16 +332,22 @@
                                 </div>
                                 <div class="filter__checkbox">
                                     <div class="filter__group mt-2">
-                                        <input type="radio" name="sync" id="id11" value="KeyPay Sync">
-                                        <label for="id11">KeyPay Sync</label>
+                                        <label class="radio-container">KeyPay Sync
+                                            <input type="radio" name="sync">
+                                            <span class="radio-checkmark"></span>
+                                        </label>
                                     </div>
                                     <div class="filter__group">
-                                        <input type="radio" name="sync" id="id12" value="Xero Sync">
-                                        <label for="id12">Xero Sync</label>
+                                        <label class="radio-container">Xero Sync
+                                            <input type="radio" name="sync">
+                                            <span class="radio-checkmark"></span>
+                                        </label>
                                     </div>
                                     <div class="filter__group">
-                                        <input type="radio" name="sync" id="id13" value="Deputy Sync">
-                                        <label for="id13">Deputy Sync</label>
+                                        <label class="radio-container">Deputy Sync
+                                            <input type="radio" name="sync">
+                                            <span class="radio-checkmark"></span>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
