modal and progressbar

--- a/pages/all-employees.html
+++ b/pages/all-employees.html
@@ -1550,7 +1550,7 @@
     <!--Modal Start-->
 
     <!-- Modal -->
-    <div class="modal fade write__model" id="write-note" data-bs-keyboard="false"
+    <div class="modal fade write__model" id="write-note" data-bs-keyboard="true"
          tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
