--- a/pages/employee-details.html
+++ b/pages/employee-details.html
@@ -618,7 +618,7 @@
     <!--Modal Start-->
 
     <!-- Modal -->
-    <div class="modal fade write__model" id="hr-document" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal fade write__model" id="hr-document" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-body m-0 p-0">
