--- a/pages/job-active.html
+++ b/pages/job-active.html
@@ -169,10 +169,12 @@
                 <div class="col-lg-2 col-md-12 col-12 mt-lg-0 mt-sm-4">
                     <div class="row align-items-center justify-content-end">
                         <div class="col-lg-12 col-md-12 col-12 ps-0">
-                            <div class="btn__jobs">
-                                <i class="fa fa-plus" aria-hidden="true"></i>
-                                Add
-                            </div>
+                            <a href="./new-listing.html">
+                                <div class="btn__jobs">
+                                    <i class="fa fa-plus" aria-hidden="true"></i>
+                                    Add
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
