messages and fixes

--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                         </div>
                         <div class="forget__pass--container d-flex justify-content-between">
                             <div>
-                                <input type="checkbox">
-                                <span>Remember me</span>
+                                <label class="checkbox__container">Remember me
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
                             </div>
                             <a href="./pages/forgot-password.html">Forgot Password?</a>
                         </div>
