--- a/pages/worksite-site-overview.html
+++ b/pages/worksite-site-overview.html
@@ -260,7 +260,7 @@
                                 <span class="action__btn action__btn-application">
                                     <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
                                 </span>
-                                <div class="payroll__sync--container application__action--option">
+                                <div class="payroll__sync--container application__action--option" id="worksiteActionbtn">
                                     <ul>
                                         <li>Invite</li>
                                         <li>Short list</li>
