--- a/pages/chat-2.html
+++ b/pages/chat-2.html
@@ -229,22 +229,8 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left"><polyline points="15 18 9 12 15 6"></polyline></svg>
                                     <div class="d-flex align-items-center" id="profileToggle">
                                         <img src="../resources/images/chat/chat-user-1.png" class="img-fluid" alt="message-profile">
-                                        <label>Louie Mcgee</label>
-                                        <span class="active__status-circle"></span>
-                                    </div>
-                                </div>
-                                <div class="message__header--action position-relative">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-circle"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="12"></line><line x1="12" y1="16" x2="12.01" y2="16"></line></svg>
-                                    <i class="fa fa-ellipsis-h" id="messageAction" aria-hidden="true"></i>
-                                    <div class="message__popup message__action--toggle">
-                                        <p>
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-                                            Mute
-                                        </p>
-                                        <p class="mb-0">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-trash"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path></svg>
-                                            Clear Chat
-                                        </p>
+                                        <label class="chat__label">Louie Mcgee</label>
+                                        <span class="active__status-circle chat__two"></span>
                                     </div>
                                 </div>
                             </div>
