job active link

--- a/pages/payroll-entry-verified.html
+++ b/pages/payroll-entry-verified.html
@@ -165,7 +165,7 @@
                 <div class="position-absolute left__border--line"></div>
                 <ul>
                     <li class="dropdown__menu--item">
-                        <span><a href="#">Active</a></span>
+                        <span><a href="./job-active.html">Active</a></span>
                     </li>
                     <li class="dropdown__menu--item">
                         <span><a href="#">Draft</a></span>
