--- a/pages/worksite-site-overview-3.html
+++ b/pages/worksite-site-overview-3.html
@@ -49,7 +49,9 @@
         </div>
         <div class="header__right--container">
             <div class="chat__notification">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+                <a href="./chat.html">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+                </a>
             </div>
             <div class="header__profile--details" id="profile">
                 <img src="../resources/images/profile.png" alt="profile"/>
@@ -148,7 +150,7 @@
 <div class="content-container">
     <div class="container-layout">
         <div class="breadcums">
-            <h3>Job Listings Active&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;<span>All Applications</span>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;<span
+            <h3>Job Listings Active&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;Barista &nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;Application Details&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;<span
                     class="active_breadcrumb">Forms</span></h3>
         </div>
 
