--- a/pages/check-mail.html
+++ b/pages/check-mail.html
@@ -32,7 +32,7 @@
   <div class="row align-items-center justify-content-center vh-100">
     <div class="col-lg-4 col-md-6 col-sm-12 col-12">
       <div class="signup__content--container check__mail--container">
-        <div class="signin__top--content d-flex justify-content-between">
+        <div class="signin__top--content d-flex justify-content-between align-items-center">
           <h2>Check Mail</h2>
           <img class="img-fluid" src="../resources/images/logo/logo.png" alt="signin logo">
         </div>
