--- a/pages/forgot-password.html
+++ b/pages/forgot-password.html
@@ -43,7 +43,7 @@
             <label for="name">Email Address</label>
             <input type="email" name="email" placeholder="Johndeo@gmail.com" >
           </div>
-          <button class="sign__in--btn" type="submit">Send</button>
+          <button class="forget__send--btn" type="submit">Send</button>
         </form>
         <div class="c-hr"></div>
       </div>
