--- a/pages/job-active.html
+++ b/pages/job-active.html
@@ -111,7 +111,7 @@
                     />
                 </svg>
             </li>
-            <li class="dropdown__menu--items menu__show position-relative" id="dropdownMenu">
+            <li class="dropdown__menu--items position-relative" id="dropdownMenu">
                 <div class="position-absolute left__border--line"></div>
                 <ul>
                     <li class="dropdown__menu--item sidebar__active">
