--- a/pages/reset-password.html
+++ b/pages/reset-password.html
@@ -53,7 +53,7 @@
                         <label for="name">Confirm Password</label>
                         <input type="password" name="email" placeholder="Re-enter your password." >
                     </div>
-                    <p>Both Password must be match!</p>
+                    <p class="password__match">Both Password must be match!</p>
                     <button class="sign__in--btn" type="submit">Reset Password</button>
                 </form>
             </div>
