--- a/pages/payroll-application-3.html
+++ b/pages/payroll-application-3.html
@@ -167,7 +167,7 @@
                 </a>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="Don’t use an award"/>
                 <br>
                 <label for='userId' class='label'>Award Name</label>
                 <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -175,7 +175,7 @@
                 </svg>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="Don’t us an agreement"/>
                 <br>
                 <label for='userId' class='label'>Employment Agreement</label>
                 <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -183,7 +183,7 @@
                 </svg>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="Use time sheets to submit all time worked"/>
                 <br>
                 <label for='userId' class='label'>Time Sheets</label>
                 <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -191,7 +191,7 @@
                 </svg>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="Pickle Jobs"/>
                 <br>
                 <label for='userId' class='label'>Prime Location</label>
                 <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -199,12 +199,12 @@
                 </svg>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder=""/>
                 <br>
                 <label for='userId' class='label'>Sub Location</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="Manually Set pay rates"/>
                 <br>
                 <label for='userId' class='label'>Pay Rate Template</label>
                 <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -212,7 +212,7 @@
                 </svg>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="Select Pay schedule"/>
                 <br>
                 <label for='userId' class='label'>Pay Schedule</label>
                 <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -220,7 +220,7 @@
                 </svg>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="Payment Type per hour"/>
                 <br>
                 <label for='userId' class='label'>Payment Type</label>
                 <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -228,17 +228,17 @@
                 </svg>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="0.0"/>
                 <br>
                 <label for='userId' class='label'>Pay Rate</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="0.0"/>
                 <br>
                 <label for='userId' class='label'>Standard work week</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                <input class='textarea' name='UserId' placeholder="0.0"/>
                 <br>
                 <label for='userId' class='label'>Hours Per Day</label>
             </div>
