--- a/pages/reset-password.html
+++ b/pages/reset-password.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="password__strength--container">
                         <span class="bar password__strength--bar"></span>
-                        <span class="password__strength--label">Week</span>
+                        <span class="password__strength--label">Weak</span>
                     </div>
                     <div class="each__input--container d-flex flex-column position-relative mb-2">
                         <label for="name">Confirm Password</label>
