--- a/pages/worksites-details.html
+++ b/pages/worksites-details.html
@@ -221,16 +221,16 @@
                 <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
                     <div class="row payroll__filter--container m-0">
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__jobs">Jobs</div>
+                            <button class="btn__jobs">Jobs</button>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__sync">Filter</div>
+                            <button class="btn__sync">Filter</button>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__jobs">
+                            <button class="btn__jobs">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
