--- a/pages/all-employees.html
+++ b/pages/all-employees.html
@@ -191,7 +191,7 @@
 
         <div class="payroll__search--container">
             <div class="row m-0">
-                <div class="col-lg-7 col-md-12 col-12">
+                <div class="col-lg-8 col-md-12 col-12 px-4">
                     <div class="row m-0">
                         <div class="col-lg-12 col-md-12 col-10 p-0">
                             <div class="payroll__search">
@@ -205,23 +205,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
-                    <div class="row payroll__filter--container m-0">
-                        <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__jobs">Jobs</div>
+                <div class="col-lg-4 col-md-12 col-12 mt-lg-0 mt-sm-4 p-0">
+                    <div class="row payroll__filter--container m-0 justify-content-end">
+                        <div class="col-lg-3 col-md-4 col-4 ps-0">
+                            <button class="btn__jobs">Jobs</button>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-4 ps-0">
+                        <div class="col-lg-3 col-md-4 col-4 ps-0">
                             <div class="btn__sync">Filter</div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__sync">
+                        <div class="col-lg-4 col-md-4 col-4 ps-0 p-0">
+                            <button class="btn__sync">
                                 <svg class="mg-r" width="16" height="16" viewBox="0 0 16 16" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
                                     <path d="M0.249934 1.61C2.56993 4.59 5.99993 9 5.99993 9V14C5.99993 15.1 6.89993 16 7.99993 16C9.09993 16 9.99993 15.1 9.99993 14V9C9.99993 9 13.4299 4.59 15.7499 1.61C16.2599 0.95 15.7899 0 14.9499 0H1.03993C0.209934 0 -0.260066 0.95 0.249934 1.61Z"
                                           fill="#F16532"/>
                                 </svg>
                                 Filter
-                            </div>
+                            </button>
                         </div>
                     </div>
                 </div>
