--- a/pages/employee-details.html
+++ b/pages/employee-details.html
@@ -185,16 +185,16 @@
                     <div class="col-lg-5">
                         <div class="row align-items-center justify-content-end m-0">
                             <div class="col-lg-4 col-md-4 col-4 ps-0">
-                                <div class="btn__jobs">
+                                <button class="btn__jobs">
                                     <i class="fa fa-comment-o" aria-hidden="true"></i>
                                     Send SMS
-                                </div>
+                                </button>
                             </div>
                             <div class="col-lg-4 col-md-4 col-4 ps-0">
-                                <div class="btn__jobs">
+                                <button class="btn__jobs">
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
                                     Add Note
-                                </div>
+                                </button>
                             </div>
                         </div>
                     </div>
