--- a/pages/payroll-application-3.html
+++ b/pages/payroll-application-3.html
@@ -159,12 +159,12 @@
         <div class="employee__details--form">
             <div class="d-flex justify-content-between align-items-center">
                 <h2>Please enter and confirm the details below before syncing with payroll.</h2>
-                <a href="#" class="enter__payroll">
+                <button class="enter__payroll">
                     <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M6.49991 11.1698L2.32991 6.99984L0.909912 8.40984L6.49991 13.9998L18.4999 1.99984L17.0899 0.589844L6.49991 11.1698Z" fill="#F6ECE1"/>
                     </svg>
                     Confirm
-                </a>
+                </button>
             </div>
             <div class="each__detail--input">
                 <input class='textarea' name='UserId' placeholder="Don’t use an award"/>
