--- a/pages/payroll-entry-verified.html
+++ b/pages/payroll-entry-verified.html
@@ -276,10 +276,10 @@
                 <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
                     <div class="row payroll__filter--container m-0 justify-content-end">
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__jobs">Jobs</div>
+                            <button class="btn__jobs">Jobs</button>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="btn__sync">Sync Type</div>
+                            <button class="btn__sync">Sync Type</button>
                         </div>
                     </div>
                 </div>
