--- a/pages/worksite-site-overview-3.html
+++ b/pages/worksite-site-overview-3.html
@@ -175,22 +175,22 @@
                     <div class="col-lg-5">
                         <div class="row align-items-center justify-content-end m-0">
                             <div class="col-lg-4 col-md-4 col-4 ps-0">
-                                <div class="btn__sync">
+                                <button class="btn__sync">
                                   <i class="fa fa-times-circle-o" aria-hidden="true"></i>
                                     Not a fit
-                                </div>
+                                </button>
                             </div>
                             <div class="col-lg-4 col-md-4 col-4 ps-0">
-                                <div class="btn__sync">
+                                <button class="btn__sync">
                                   <i class="fa fa-star-o" aria-hidden="true"></i>
                                     Shortlist
-                                </div>
+                                </button>
                             </div>
                             <div class="col-lg-4 col-md-4 col-4 ps-0">
-                                <div class="btn__jobs">
+                                <button class="btn__jobs">
                                   <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                     Invite
-                                </div>
+                                </button>
                             </div>
                         </div>
                     </div>
