--- a/pages/employee-details.html
+++ b/pages/employee-details.html
@@ -307,7 +307,7 @@
                             </div>
                             <div class="details__container">
                                 <div class="details__top--right">
-                                    <h3>Inductions and Training</h3>
+                                    <h3>Training & E-Learning</h3>
                                     <div class="payroll__filter--container m-0">
                                         <div class="btn__edit">Upload</div>
                                     </div>
@@ -324,7 +324,7 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr>
+                                        <tr class="border__tr">
                                             <td>How to handle</td>
                                             <td>
                                                 <div class="complete__tick">
@@ -367,7 +367,7 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr>
+                                        <tr class="border__tr">
                                             <td>NSW RSA Hand Book</td>
                                             <td>
                                                 <div class="complete__tick">
@@ -409,7 +409,7 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr>
+                                        <tr class="border__tr">
                                             <td>Contract</td>
                                             <td>max 2020</td>
                                             <td>Remove</td>
@@ -441,7 +441,7 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr>
+                                        <tr class="border__tr">
                                             <td>Resume</td>
                                             <td>max 2020</td>
                                             <td>Remove</td>
@@ -561,7 +561,7 @@
                                         <div class="btn__edit">Edit</div>
                                     </div>
                                 </div>
-                                <div class="employee__content--container">
+                                <div class="employee__content--container employee__note">
                                     <div class="c-border"></div>
                                     <table class="table table-borderless">
                                         <thead>
