--- a/pages/worksite-site-overview-2.html
+++ b/pages/worksite-site-overview-2.html
@@ -356,9 +356,9 @@
                             </div>
 
                             <div class="details__container">
-                                <div class="accordion" id="accordionExample2">
+                                <div class="accordion">
                                     <div class="accordion-item">
-                                        <h3 class="collapsed" id="headingOne2">Uploaded Documents</h3>
+                                        <h3 class="collapsed">Uploaded Documents</h3>
                                         <div class="c-border"></div>
                                         <div id="collapseOne2" class="accordion-collapse">
                                             <div class="accordion-body">
