--- a/pages/worksites-details.html
+++ b/pages/worksites-details.html
@@ -167,23 +167,7 @@
                     <button class="nav-link active" id="all-employee-tab" data-bs-toggle="tab"
                             data-bs-target="#all-payroll" type="button" role="tab" aria-controls="nav-home"
                             aria-selected="true">
-                        <svg width="19" height="22" viewBox="0 0 19 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M7 6C7 5.44772 7.44772 5 8 5H14C14.5523 5 15 5.44772 15 6C15 6.55228 14.5523 7 14 7H8C7.44772 7 7 6.55228 7 6Z"
-                                  fill="#616161"/>
-                            <path d="M8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12H14C14.5523 12 15 11.5523 15 11C15 10.4477 14.5523 10 14 10H8Z"
-                                  fill="#616161"/>
-                            <path d="M7 16C7 15.4477 7.44772 15 8 15H14C14.5523 15 15 15.4477 15 16C15 16.5523 14.5523 17 14 17H8C7.44772 17 7 16.5523 7 16Z"
-                                  fill="#616161"/>
-                            <path d="M6 6C6 6.5523 5.5523 7 5 7C4.4477 7 4 6.5523 4 6C4 5.4477 4.4477 5 5 5C5.5523 5 6 5.4477 6 6Z"
-                                  fill="#616161"/>
-                            <path d="M5 12C5.5523 12 6 11.5523 6 11C6 10.4477 5.5523 10 5 10C4.4477 10 4 10.4477 4 11C4 11.5523 4.4477 12 5 12Z"
-                                  fill="#616161"/>
-                            <path d="M6 16C6 16.5523 5.5523 17 5 17C4.4477 17 4 16.5523 4 16C4 15.4477 4.4477 15 5 15C5.5523 15 6 15.4477 6 16Z"
-                                  fill="#616161"/>
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                  d="M0.5 2C0.5 0.89543 1.39543 0 2.5 0H16.5C17.6046 0 18.5 0.89543 18.5 2V20C18.5 21.1046 17.6046 22 16.5 22H2.5C1.39543 22 0.5 21.1046 0.5 20V2ZM16.5 2H2.5V20H16.5V2Z"
-                                  fill="#616161"/>
-                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#9E9E9E" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
                         All Employees
                     </button>
                     <button class="nav-link" id="visa-tab" data-bs-toggle="tab" data-bs-target="#pending-payroll"
